--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     margin-bottom: 18px;
 ">Join to gain access to recent releases of <b>high quality</b> drum kits!</p>
 			<div class="buttons">
-			<a class="a btn-a" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZK879M2397YGW">
-		<button type="button" style="margin-bottom: 15px; border-left-width: 15px; border-right-width: 15px; padding-top: 7px; padding-bottom: 7px; padding-left: 22px; padding-right: 22px;" class="btn btn-primary" onclick="window.open('https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZK879M2397YGW', '_self');"><b>Become a member</b></button>
+			<a class="a btn-a" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EV4UNSYP4SL5L">
+		<button type="button" style="margin-bottom: 15px; border-left-width: 15px; border-right-width: 15px; padding-top: 7px; padding-bottom: 7px; padding-left: 22px; padding-right: 22px;" class="btn btn-primary" onclick="window.open('https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EV4UNSYP4SL5L', '_self');"><b>Become a member</b></button>
 		</a>
 		</div>
 		<div class="social" style="margin-top: 3px;">
@@ -44,17 +44,17 @@
 		    <h3>Monthly Membership</h3>
 			<div class="price">$10<sub> / month</sub></div>
 			<div class="button2">
-			<a class="a btn-a" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZK879M2397YGW">
+			<a class="a btn-a" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EV4UNSYP4SL5L">
 		<button type="button" style="
     border-right-width: 0px;
     border-left-width: 0px;
-" class="btn btn-secondary" onclick="window.open('https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZK879M2397YGW', '_self');"><b>Join</b></button>
+" class="btn btn-secondary" onclick="window.open('https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EV4UNSYP4SL5L', '_self');"><b>Join</b></button>
 		</a>
           </div>
 		  <div class="details">
 		    <ul style="padding-left: 25px;">
 			  <li>this enables me to solely focus on producing the best quality kits instead of focusing on selling</li>
-			  <li>monthly excel file with kit links will be sent via email for any error dm me or email: contactmehere.beats@gmail.com</li>
+			  <li>monthly excel file with kit links will be <b>sent via email</b> for any error dm me or email: contactmehere.beats@gmail.com<br>OR click on "Return to Merchant" upon payment to get download link</li>
 			  <li>promised <b>at least</b> 2 kits/month (up to 4 new releases/month)</li>
 			  <li>can get 2 <b>free</b> old kits/month (dm me on ig @shoterbeatz for your choice)</li>
 			  <li>also gets to decide which kit I work on next (e.g. Scorpion, To Pimp A Butterfly, College Dropout..<br><br><b>*if there is no mainstream release*</b></li>
