--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		  <a href="https://www.youtube.com/channel/UC92caQEB5iCLBWjOrs31obw" target="_blank"><i class="fa fa-youtube-play"></i></a>
 		</div>
 		<div class="next_section">
-		  <h3 class="membership" style="margin-bottom: 70px;">Choose your membership</h3>
+		  <h3 class="membership" style="margin-bottom: 70px;">After Joining You Will Receive Future - MIXTAPE PLUTO Kit Link</h3>
 		</div>
 		<div class="box">
 		<div class="content">
@@ -53,7 +53,7 @@
           </div>
 		  <div class="details">
 		    <ul style="padding-left: 25px;">
-			  <li>this enables me to solely focus on producing the best quality kits instead of focusing on selling</li>
+			  <li>this enables me to solely focus on producing the best quality kits instead of focusing on selling</li>-->
 			  <li>monthly excel file with kit links will be <b>sent via email</b> for any error dm me or email: contactmehere.beats@gmail.com<br>OR click on "Return to Merchant" upon payment to get download link</li>
 			  <li>promised <b>at least</b> 2 kits/month (up to 4 new releases/month)</li>
 			  <li>can get 2 <b>free</b> old kits/month (dm me on ig @shoterbeatz for your choice)</li>
