--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
 		  <div class="details">
 		    <ul style="padding-left: 25px;">
-			  <li>this enables me to solely focus on producing the best quality kits instead of focusing on selling</li>-->
+			  <li>this enables me to solely focus on producing the best quality kits instead of focusing on selling</li>
 			  <li>monthly excel file with kit links will be <b>sent via email</b> for any error dm me or email: contactmehere.beats@gmail.com<br>OR click on "Return to Merchant" upon payment to get download link</li>
 			  <li>promised <b>at least</b> 2 kits/month (up to 4 new releases/month)</li>
 			  <li>can get 2 <b>free</b> old kits/month (dm me on ig @shoterbeatz for your choice)</li>
